initial yml and index

--- a/index.Rmd
+++ b/index.Rmd
@@ -14,7 +14,19 @@ description: "A thesis to fulfil the requirements for the Doctor of Philosophy"
 ---
 
 # Preface {-}
+
 ```{r, echo = FALSE}
 knitr::include_graphics('images/OUNZ_logo.png')
 ```
+
 ## Abstract {-}
+
+## Abbreviations {-}
+
+SNP: Single nucleotide polymorphism
+T2D: Type 2 diabetes
+WGS: Whole genome (re)sequence
+XP-EHH: Cross population extended haplotype homozygosity
+iHH: integrated haplotype homozygosity
+iHS: integrated haplotype homozygosity score
+BMI: Body mass index
