correct method of referencing figure

--- a/05-Selection_and_association.Rmd
+++ b/05-Selection_and_association.Rmd
@@ -29,10 +29,11 @@ The top SNPs from the GWAS were:
 - ULT
 - all
 
-manhattan plot for the all \@ref(fig:manhat_all_age_sex)
+manhattan plot for the all \@ref(fig:manhatAllAgeSex)
 
+(ref:manhatAllAgeSex) _Manhattan plot for Gout GWAS adjusted for age and sex_
 
-```{r manhat_all_age_sex, echo = FALSE, fig.cap='(ref:manhat_all_age_sex)', fig.width=7, fig.asp=1, out.width='50%', fig.align='center'}
+```{r manhatAllAgeSex, echo = FALSE, fig.cap='(ref:manhatAllAgeSex)', fig.width=7, fig.asp=1, out.width='80%', fig.align='center'}
 knitr::include_graphics('images/05_selection_and_association/all_age_sex.png')
 ```
 
